--- a/META.yml
+++ b/META.yml
@@ -1,29 +1,30 @@
 ---
 name: HTML-FormWidgets
-version: 0.1.63
+version: 0.1.67
 author:
   - 'Peter Flanigan, C<< <Support at RoxSoft.co.uk> >>'
 abstract: Create HTML form markup
 license: perl
 resources:
   license: http://dev.perl.org/licenses/
+configure_requires:
+  version: 0.74
 requires:
   Class::Data::Accessor: 0.04001
   HTML::Accessors: 0.1.22
   Readonly: 1.03
   Syntax::Highlight::Perl: 1.00
+  Text::Markdown: 1.0.20
   Text::ParseWords: 3.22
   Text::Tabs: 98.112801
-  perl: 5.8
+  perl: 5.008
   version: 0.74
 build_requires:
   Test::More: 0.74
-configure_requires:
-  version: 0.74
 provides:
   HTML::FormWidgets:
     file: lib/HTML/FormWidgets.pm
-    version: 0.1.63
+    version: 0.1.67
   HTML::FormWidgets::Anchor:
     file: lib/HTML/FormWidgets/Anchor.pm
     version: 0.1.41
@@ -83,11 +84,11 @@ provides:
     version: 0.1.7
   HTML::FormWidgets::Textfield:
     file: lib/HTML/FormWidgets/Textfield.pm
-    version: 0.1.7
+    version: 0.1.68
   HTML::FormWidgets::Tree:
     file: lib/HTML/FormWidgets/Tree.pm
     version: 0.1.5
-generated_by: Module::Build version 0.2808
+generated_by: Module::Build version 0.280801
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
