--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: HTML-FormWidgets
-version: 0.1.75
+version: 0.2.102
 author:
   - 'Peter Flanigan, C<< <Support at RoxSoft.co.uk> >>'
 abstract: Create HTML form markup
@@ -8,11 +8,12 @@ license: perl
 resources:
   license: http://dev.perl.org/licenses/
 configure_requires:
+  ExtUtils::MakeMaker: 6.42
   version: 0.74
 requires:
-  Class::Data::Accessor: 0.04001
+  Class::Accessor::Fast: 0.31
+  Class::Inspector: 1.18
   HTML::Accessors: 0.1.22
-  Readonly: 1.03
   Syntax::Highlight::Perl: 1.00
   Text::Markdown: 1.0.20
   Text::ParseWords: 3.22
@@ -24,70 +25,70 @@ build_requires:
 provides:
   HTML::FormWidgets:
     file: lib/HTML/FormWidgets.pm
-    version: 0.1.75
+    version: 0.2.102
   HTML::FormWidgets::Anchor:
     file: lib/HTML/FormWidgets/Anchor.pm
-    version: 0.1.41
+    version: 0.2.83
   HTML::FormWidgets::Checkbox:
     file: lib/HTML/FormWidgets/Checkbox.pm
-    version: 0.1.28
+    version: 0.2.83
   HTML::FormWidgets::Chooser:
     file: lib/HTML/FormWidgets/Chooser.pm
-    version: 0.1.74
+    version: 0.2.83
   HTML::FormWidgets::Cloud:
     file: lib/HTML/FormWidgets/Cloud.pm
-    version: 0.1.44
+    version: 0.2.83
   HTML::FormWidgets::Date:
     file: lib/HTML/FormWidgets/Date.pm
-    version: 0.1.62
+    version: 0.2.95
   HTML::FormWidgets::File:
     file: lib/HTML/FormWidgets/File.pm
-    version: 0.1.33
+    version: 0.2.95
   HTML::FormWidgets::Freelist:
     file: lib/HTML/FormWidgets/Freelist.pm
-    version: 0.1.55
+    version: 0.2.89
   HTML::FormWidgets::GroupMembership:
     file: lib/HTML/FormWidgets/GroupMembership.pm
-    version: 0.1.55
+    version: 0.2.89
   HTML::FormWidgets::ImageButton:
     file: lib/HTML/FormWidgets/ImageButton.pm
-    version: 0.1.55
+    version: 0.2.98
   HTML::FormWidgets::Label:
     file: lib/HTML/FormWidgets/Label.pm
-    version: 0.1.13
+    version: 0.2.94
   HTML::FormWidgets::Note:
     file: lib/HTML/FormWidgets/Note.pm
-    version: 0.1.24
+    version: 0.2.83
   HTML::FormWidgets::Password:
     file: lib/HTML/FormWidgets/Password.pm
-    version: 0.1.14
+    version: 0.2.83
   HTML::FormWidgets::PopupMenu:
     file: lib/HTML/FormWidgets/PopupMenu.pm
-    version: 0.1.5
+    version: 0.2.83
   HTML::FormWidgets::RadioGroup:
     file: lib/HTML/FormWidgets/RadioGroup.pm
-    version: 0.1.5
+    version: 0.2.83
   HTML::FormWidgets::Rule:
     file: lib/HTML/FormWidgets/Rule.pm
-    version: 0.1.59
+    version: 0.2.83
   HTML::FormWidgets::ScrollingList:
     file: lib/HTML/FormWidgets/ScrollingList.pm
-    version: 0.1.5
+    version: 0.2.83
   HTML::FormWidgets::Table:
     file: lib/HTML/FormWidgets/Table.pm
-    version: 0.1.58
+    version: 0.2.94
   HTML::FormWidgets::Template:
     file: lib/HTML/FormWidgets/Template.pm
-    version: 0.1.24
+    version: 0.2.79
   HTML::FormWidgets::Textarea:
     file: lib/HTML/FormWidgets/Textarea.pm
-    version: 0.1.7
+    version: 0.2.83
   HTML::FormWidgets::Textfield:
     file: lib/HTML/FormWidgets/Textfield.pm
-    version: 0.1.68
+    version: 0.2.83
   HTML::FormWidgets::Tree:
     file: lib/HTML/FormWidgets/Tree.pm
-    version: 0.1.5
+    version: 0.2.95
 generated_by: Module::Build version 0.280801
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
