--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: HTML-FormWidgets
-version: 0.2.108
+version: 0.3.139
 author:
   - 'Peter Flanigan, C<< <Support at RoxSoft.co.uk> >>'
 abstract: Create HTML form markup
@@ -18,6 +18,7 @@ requires:
   Text::Markdown: 1.0.20
   Text::ParseWords: 3.22
   Text::Tabs: 98.112801
+  parent: 0.221
   perl: 5.008
   version: 0.74
 build_requires:
@@ -27,71 +28,86 @@ build_requires:
 provides:
   HTML::FormWidgets:
     file: lib/HTML/FormWidgets.pm
-    version: 0.2.108
+    version: 0.3.139
   HTML::FormWidgets::Anchor:
     file: lib/HTML/FormWidgets/Anchor.pm
-    version: 0.2.83
+    version: 0.3.135
+  HTML::FormWidgets::Button:
+    file: lib/HTML/FormWidgets/Button.pm
+    version: 0.3.143
   HTML::FormWidgets::Checkbox:
     file: lib/HTML/FormWidgets/Checkbox.pm
-    version: 0.2.83
+    version: 0.3.135
   HTML::FormWidgets::Chooser:
     file: lib/HTML/FormWidgets/Chooser.pm
-    version: 0.2.83
+    version: 0.3.135
   HTML::FormWidgets::Cloud:
     file: lib/HTML/FormWidgets/Cloud.pm
-    version: 0.2.83
+    version: 0.3.135
   HTML::FormWidgets::Date:
     file: lib/HTML/FormWidgets/Date.pm
-    version: 0.2.95
+    version: 0.3.137
   HTML::FormWidgets::File:
     file: lib/HTML/FormWidgets/File.pm
-    version: 0.2.95
+    version: 0.3.137
   HTML::FormWidgets::Freelist:
     file: lib/HTML/FormWidgets/Freelist.pm
-    version: 0.2.89
+    version: 0.3.135
   HTML::FormWidgets::GroupMembership:
     file: lib/HTML/FormWidgets/GroupMembership.pm
-    version: 0.2.89
-  HTML::FormWidgets::ImageButton:
-    file: lib/HTML/FormWidgets/ImageButton.pm
-    version: 0.2.98
+    version: 0.3.135
+  HTML::FormWidgets::Hidden:
+    file: lib/HTML/FormWidgets/Hidden.pm
+    version: 0.3.135
+  HTML::FormWidgets::Image:
+    file: lib/HTML/FormWidgets/Image.pm
+    version: 0.3.135
   HTML::FormWidgets::Label:
     file: lib/HTML/FormWidgets/Label.pm
-    version: 0.2.94
+    version: 0.3.135
+  HTML::FormWidgets::Menu:
+    file: lib/HTML/FormWidgets/Menu.pm
+    version: 0.3.142
   HTML::FormWidgets::Note:
     file: lib/HTML/FormWidgets/Note.pm
-    version: 0.2.83
+    version: 0.3.135
+  HTML::FormWidgets::Paragraphs:
+    file: lib/HTML/FormWidgets/Paragraphs.pm
+    version: 0.3.148
   HTML::FormWidgets::Password:
     file: lib/HTML/FormWidgets/Password.pm
-    version: 0.2.83
+    version: 0.3.135
   HTML::FormWidgets::PopupMenu:
     file: lib/HTML/FormWidgets/PopupMenu.pm
-    version: 0.2.83
+    version: 0.3.135
   HTML::FormWidgets::RadioGroup:
     file: lib/HTML/FormWidgets/RadioGroup.pm
-    version: 0.2.83
+    version: 0.3.135
   HTML::FormWidgets::Rule:
     file: lib/HTML/FormWidgets/Rule.pm
-    version: 0.2.83
+    version: 0.3.135
   HTML::FormWidgets::ScrollingList:
     file: lib/HTML/FormWidgets/ScrollingList.pm
-    version: 0.2.83
+    version: 0.3.135
+  HTML::FormWidgets::Slider:
+    file: lib/HTML/FormWidgets/Slider.pm
+    version: 0.1.138
   HTML::FormWidgets::Table:
     file: lib/HTML/FormWidgets/Table.pm
-    version: 0.2.94
+    version: 0.3.137
   HTML::FormWidgets::Template:
     file: lib/HTML/FormWidgets/Template.pm
-    version: 0.2.79
+    version: 0.3.140
   HTML::FormWidgets::Textarea:
     file: lib/HTML/FormWidgets/Textarea.pm
-    version: 0.2.83
+    version: 0.3.135
   HTML::FormWidgets::Textfield:
     file: lib/HTML/FormWidgets/Textfield.pm
-    version: 0.2.83
+    version: 0.3.135
   HTML::FormWidgets::Tree:
     file: lib/HTML/FormWidgets/Tree.pm
-    version: 0.2.95
-generated_by: Module::Build version 0.3
+    version: 0.3.135
+generated_by: Module::Build version 0.31
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
