--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: HTML-FormWidgets
-version: 0.5.184
+version: 0.5.200
 author:
   - 'Peter Flanigan, C<< <Support at RoxSoft.co.uk> >>'
 abstract: Create HTML form markup
@@ -12,7 +12,7 @@ configure_requires:
   version: 0.74
 requires:
   Class::Accessor::Fast: 0.31
-  Class::Inspector: 1.18
+  Class::MOP: 0.84
   HTML::Accessors: 0.1.22
   Syntax::Highlight::Perl: 1.00
   Text::Markdown: 1.0.20
@@ -26,7 +26,7 @@ build_requires:
 provides:
   HTML::FormWidgets:
     file: lib/HTML/FormWidgets.pm
-    version: 0.5.184
+    version: 0.5.200
   HTML::FormWidgets::Anchor:
     file: lib/HTML/FormWidgets/Anchor.pm
     version: 0.5.184
