--- a/META.yml
+++ b/META.yml
@@ -1,111 +1,133 @@
 ---
-name: HTML-FormWidgets
-version: 0.5.200
+abstract: 'Create HTML form markup'
 author:
   - 'Peter Flanigan, C<< <Support at RoxSoft.co.uk> >>'
-abstract: Create HTML form markup
-license: perl
-resources:
-  license: http://dev.perl.org/licenses/
-configure_requires:
-  ExtUtils::MakeMaker: 6.42
-  version: 0.74
-requires:
-  Class::Accessor::Fast: 0.31
-  Class::MOP: 0.84
-  HTML::Accessors: 0.1.22
-  Syntax::Highlight::Perl: 1.00
-  Text::Markdown: 1.0.20
-  Text::ParseWords: 3.22
-  Text::Tabs: 98.112801
-  parent: 0.221
-  perl: 5.008
-  version: 0.74
 build_requires:
   Test::More: 0.74
-provides:
-  HTML::FormWidgets:
-    file: lib/HTML/FormWidgets.pm
-    version: 0.5.200
-  HTML::FormWidgets::Anchor:
-    file: lib/HTML/FormWidgets/Anchor.pm
-    version: 0.5.184
-  HTML::FormWidgets::Button:
-    file: lib/HTML/FormWidgets/Button.pm
-    version: 0.5.184
-  HTML::FormWidgets::Checkbox:
-    file: lib/HTML/FormWidgets/Checkbox.pm
-    version: 0.5.184
-  HTML::FormWidgets::Chooser:
-    file: lib/HTML/FormWidgets/Chooser.pm
-    version: 0.5.184
-  HTML::FormWidgets::Cloud:
-    file: lib/HTML/FormWidgets/Cloud.pm
-    version: 0.5.184
-  HTML::FormWidgets::Date:
-    file: lib/HTML/FormWidgets/Date.pm
-    version: 0.5.184
-  HTML::FormWidgets::File:
-    file: lib/HTML/FormWidgets/File.pm
-    version: 0.5.184
-  HTML::FormWidgets::Freelist:
-    file: lib/HTML/FormWidgets/Freelist.pm
-    version: 0.5.184
-  HTML::FormWidgets::GroupMembership:
-    file: lib/HTML/FormWidgets/GroupMembership.pm
-    version: 0.5.184
-  HTML::FormWidgets::Hidden:
-    file: lib/HTML/FormWidgets/Hidden.pm
-    version: 0.5.184
-  HTML::FormWidgets::Image:
-    file: lib/HTML/FormWidgets/Image.pm
-    version: 0.5.184
-  HTML::FormWidgets::Label:
-    file: lib/HTML/FormWidgets/Label.pm
-    version: 0.5.184
-  HTML::FormWidgets::Menu:
-    file: lib/HTML/FormWidgets/Menu.pm
-    version: 0.5.184
-  HTML::FormWidgets::Note:
-    file: lib/HTML/FormWidgets/Note.pm
-    version: 0.5.184
-  HTML::FormWidgets::Paragraphs:
-    file: lib/HTML/FormWidgets/Paragraphs.pm
-    version: 0.5.184
-  HTML::FormWidgets::Password:
-    file: lib/HTML/FormWidgets/Password.pm
-    version: 0.5.184
-  HTML::FormWidgets::PopupMenu:
-    file: lib/HTML/FormWidgets/PopupMenu.pm
-    version: 0.5.184
-  HTML::FormWidgets::RadioGroup:
-    file: lib/HTML/FormWidgets/RadioGroup.pm
-    version: 0.5.184
-  HTML::FormWidgets::Rule:
-    file: lib/HTML/FormWidgets/Rule.pm
-    version: 0.5.184
-  HTML::FormWidgets::ScrollingList:
-    file: lib/HTML/FormWidgets/ScrollingList.pm
-    version: 0.5.184
-  HTML::FormWidgets::Slider:
-    file: lib/HTML/FormWidgets/Slider.pm
-    version: 0.5.184
-  HTML::FormWidgets::Table:
-    file: lib/HTML/FormWidgets/Table.pm
-    version: 0.5.184
-  HTML::FormWidgets::Template:
-    file: lib/HTML/FormWidgets/Template.pm
-    version: 0.5.184
-  HTML::FormWidgets::Textarea:
-    file: lib/HTML/FormWidgets/Textarea.pm
-    version: 0.5.184
-  HTML::FormWidgets::Textfield:
-    file: lib/HTML/FormWidgets/Textfield.pm
-    version: 0.5.184
-  HTML::FormWidgets::Tree:
-    file: lib/HTML/FormWidgets/Tree.pm
-    version: 0.5.184
-generated_by: Module::Build version 0.31
+configure_requires:
+  Module::Build: 0.32
+  version: 0.74
+dynamic_config: 1
+generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.110580'
+license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
+name: HTML-FormWidgets
+no_index:
+  directory:
+    - examples
+    - inc
+    - t
+provides:
+  HTML::FormWidgets:
+    file: lib/HTML/FormWidgets.pm
+    version: v0.6.310
+  HTML::FormWidgets::Anchor:
+    file: lib/HTML/FormWidgets/Anchor.pm
+    version: v0.6.302
+  HTML::FormWidgets::Button:
+    file: lib/HTML/FormWidgets/Button.pm
+    version: v0.6.302
+  HTML::FormWidgets::Checkbox:
+    file: lib/HTML/FormWidgets/Checkbox.pm
+    version: v0.6.278
+  HTML::FormWidgets::Chooser:
+    file: lib/HTML/FormWidgets/Chooser.pm
+    version: v0.6.278
+  HTML::FormWidgets::Cloud:
+    file: lib/HTML/FormWidgets/Cloud.pm
+    version: v0.6.292
+  HTML::FormWidgets::Date:
+    file: lib/HTML/FormWidgets/Date.pm
+    version: v0.6.303
+  HTML::FormWidgets::File:
+    file: lib/HTML/FormWidgets/File.pm
+    version: v0.6.281
+  HTML::FormWidgets::Freelist:
+    file: lib/HTML/FormWidgets/Freelist.pm
+    version: v0.6.273
+  HTML::FormWidgets::GroupMembership:
+    file: lib/HTML/FormWidgets/GroupMembership.pm
+    version: v0.6.273
+  HTML::FormWidgets::Hidden:
+    file: lib/HTML/FormWidgets/Hidden.pm
+    version: v0.6.248
+  HTML::FormWidgets::Image:
+    file: lib/HTML/FormWidgets/Image.pm
+    version: v0.6.224
+  HTML::FormWidgets::Label:
+    file: lib/HTML/FormWidgets/Label.pm
+    version: v0.6.280
+  HTML::FormWidgets::Menu:
+    file: lib/HTML/FormWidgets/Menu.pm
+    version: v0.6.278
+  HTML::FormWidgets::Note:
+    file: lib/HTML/FormWidgets/Note.pm
+    version: v0.6.275
+  HTML::FormWidgets::POD:
+    file: lib/HTML/FormWidgets/POD.pm
+    version: v0.6.276
+  HTML::FormWidgets::Paragraphs:
+    file: lib/HTML/FormWidgets/Paragraphs.pm
+    version: v0.6.276
+  HTML::FormWidgets::Password:
+    file: lib/HTML/FormWidgets/Password.pm
+    version: v0.6.293
+  HTML::FormWidgets::PopupMenu:
+    file: lib/HTML/FormWidgets/PopupMenu.pm
+    version: v0.6.224
+  HTML::FormWidgets::RadioGroup:
+    file: lib/HTML/FormWidgets/RadioGroup.pm
+    version: v0.6.224
+  HTML::FormWidgets::Rule:
+    file: lib/HTML/FormWidgets/Rule.pm
+    version: v0.6.273
+  HTML::FormWidgets::ScrollPin:
+    file: lib/HTML/FormWidgets/ScrollPin.pm
+    version: v0.6.280
+  HTML::FormWidgets::ScrollingList:
+    file: lib/HTML/FormWidgets/ScrollingList.pm
+    version: v0.6.224
+  HTML::FormWidgets::SidebarPanel:
+    file: lib/HTML/FormWidgets/SidebarPanel.pm
+    version: v0.6.273
+  HTML::FormWidgets::Slider:
+    file: lib/HTML/FormWidgets/Slider.pm
+    version: v0.6.273
+  HTML::FormWidgets::TabSwapper:
+    file: lib/HTML/FormWidgets/TabSwapper.pm
+    version: v0.6.249
+  HTML::FormWidgets::Table:
+    file: lib/HTML/FormWidgets/Table.pm
+    version: v0.6.295
+  HTML::FormWidgets::Template:
+    file: lib/HTML/FormWidgets/Template.pm
+    version: v0.6.268
+  HTML::FormWidgets::Textarea:
+    file: lib/HTML/FormWidgets/Textarea.pm
+    version: v0.6.255
+  HTML::FormWidgets::Textfield:
+    file: lib/HTML/FormWidgets/Textfield.pm
+    version: v0.6.279
+  HTML::FormWidgets::Tree:
+    file: lib/HTML/FormWidgets/Tree.pm
+    version: v0.6.279
+requires:
+  Class::Accessor::Fast: 0.31
+  Class::MOP: 0.84
+  HTML::Accessors: v0.4.0
+  Pod::Xhtml: 1.61
+  Scalar::Util: 1.23
+  Syntax::Highlight::Perl: 1.00
+  Text::ParseWords: 3.22
+  Text::Tabs: 98.112801
+  Try::Tiny: 0.06
+  parent: 0.221
+  perl: 5.008
+  version: 0.74
+resources:
+  bugtracker: http://rt.cpan.org/NoAuth/Bugs.html?Dist=HTML-FormWidgets
+  homepage: http://www.roxsoft.co.uk
+  license: http://dev.perl.org/licenses/
+version: 0.6.310
