--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,14 @@
 ---
 abstract: 'Create HTML user interface components'
 author:
-  - 'Peter Flanigan, C<< <Support at RoxSoft.co.uk> >>'
+  - 'Peter Flanigan, C<< <pjfl@cpan.org> >>'
 build_requires:
   Test::More: 0.74
 configure_requires:
   Module::Build: 0.32
   version: 0.74
 dynamic_config: 1
-generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.112621'
+generated_by: 'Module::Build version 0.4004, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -18,110 +18,114 @@ no_index:
   directory:
     - examples
     - inc
+    - share
     - t
 provides:
   HTML::FormWidgets:
     file: lib/HTML/FormWidgets.pm
-    version: v0.17.389
+    version: v0.18.391
   HTML::FormWidgets::Anchor:
     file: lib/HTML/FormWidgets/Anchor.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::Async:
     file: lib/HTML/FormWidgets/Async.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::Button:
     file: lib/HTML/FormWidgets/Button.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::Checkbox:
     file: lib/HTML/FormWidgets/Checkbox.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::Chooser:
     file: lib/HTML/FormWidgets/Chooser.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::Cloud:
     file: lib/HTML/FormWidgets/Cloud.pm
-    version: v0.17.384
+    version: v0.18.391
+  HTML::FormWidgets::Columnizer:
+    file: lib/HTML/FormWidgets/Columnizer.pm
+    version: v0.6.257
   HTML::FormWidgets::Date:
     file: lib/HTML/FormWidgets/Date.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::File:
     file: lib/HTML/FormWidgets/File.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::Freelist:
     file: lib/HTML/FormWidgets/Freelist.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::GroupMembership:
     file: lib/HTML/FormWidgets/GroupMembership.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::Hidden:
     file: lib/HTML/FormWidgets/Hidden.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::Image:
     file: lib/HTML/FormWidgets/Image.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::Label:
     file: lib/HTML/FormWidgets/Label.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::List:
     file: lib/HTML/FormWidgets/List.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::Menu:
     file: lib/HTML/FormWidgets/Menu.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::Note:
     file: lib/HTML/FormWidgets/Note.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::POD:
     file: lib/HTML/FormWidgets/POD.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::Paragraphs:
     file: lib/HTML/FormWidgets/Paragraphs.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::Password:
     file: lib/HTML/FormWidgets/Password.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::PopupMenu:
     file: lib/HTML/FormWidgets/PopupMenu.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::RadioGroup:
     file: lib/HTML/FormWidgets/RadioGroup.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::Rule:
     file: lib/HTML/FormWidgets/Rule.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::ScrollPin:
     file: lib/HTML/FormWidgets/ScrollPin.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::ScrollingList:
     file: lib/HTML/FormWidgets/ScrollingList.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::SidebarPanel:
     file: lib/HTML/FormWidgets/SidebarPanel.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::Slider:
     file: lib/HTML/FormWidgets/Slider.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::TabSwapper:
     file: lib/HTML/FormWidgets/TabSwapper.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::Table:
     file: lib/HTML/FormWidgets/Table.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::TableRow:
     file: lib/HTML/FormWidgets/TableRow.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::Template:
     file: lib/HTML/FormWidgets/Template.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::Textarea:
     file: lib/HTML/FormWidgets/Textarea.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::Textfield:
     file: lib/HTML/FormWidgets/Textfield.pm
-    version: v0.17.384
+    version: v0.18.391
   HTML::FormWidgets::Tree:
     file: lib/HTML/FormWidgets/Tree.pm
-    version: v0.17.384
+    version: v0.18.391
 requires:
   Class::Accessor::Fast: 0.31
   HTML::Accessors: v0.7.0
@@ -140,4 +144,4 @@ resources:
   bugtracker: http://rt.cpan.org/NoAuth/Bugs.html?Dist=HTML-FormWidgets
   homepage: http://www.roxsoft.co.uk
   license: http://dev.perl.org/licenses/
-version: 0.17.389
+version: v0.18.391
